[package]
name = "alvr_dashboard"
description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
alvr_common.workspace = true
alvr_session.workspace = true
alvr_events.workspace = true
alvr_commands.workspace = true
alvr_filesystem.workspace = true

env_logger = "0.10"

egui = "0.20"
eframe = { version = "0.20", default-features = false, features = ["wgpu", "default_fonts"] }

reqwest = { version = "0.11", features = ["native-tls", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite =  { version = "0.18", features = ["native-tls"] }

fluent = "0.16"
fluent-syntax = "0.11"
fluent-langneg = "0.13"

bincode = "1"
serde = { version = "1" }
serde_json = "1"
settings-schema = { version = "*", features = [
    "rename_camel_case",
] }
unic-langid = "0.9"
url = "2"
futures-util = "0.3"

sysinfo = { version = "0.27", default-features = false }

[target.'cfg(not(target_os = "android"))'.dependencies]
locale_config = "0.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.deb]
name = "alvr"
maintainer = "m00n"
section = "net"
depends = "libx264, libjack-jackd2-0, $auto"
assets = [
    ["target/release/alvr_dashboard", "usr/bin/", "755"],
    ["target/release/alvr_launcher", "usr/bin/", "755"],
    ["target/release/alvr_vrcompositor_wrapper", "usr/libexec/alvr/vrcompositor-wrapper", "755"],
    ["target/release/libalvr_vulkan_layer.so", "usr/lib64/", "644"],
    ["target/release/libalvr_server.so", "usr/lib64/alvr/bin/linux64/driver_alvr_server.so", "644"],
    ["../../alvr/vulkan_layer/layer/alvr_x86_64.json", "usr/share/vulkan/explicit_layer.d/", "644"],
    ["../../alvr/xtask/resources/driver.vrdrivermanifest", "usr/lib64/alvr/", "644"],
    ["../../dashboard/**/*", "usr/share/alvr/dashboard/", "644"],
]